Project Name change to Battle

--- a/aqueous/index.html
+++ b/aqueous/index.html
@@ -28,7 +28,7 @@
 			<div class="row">
 				<div class="12u" id="logo"> <!-- Logo -->
 					<h1><a href="#" class="mobileUI-site-name">PHP Frameworks Battle</a></h1>
-					<p>Aqueous in [project name goes here]</p>
+					<p>Battle in [project name goes here]</p>
 				</div>
 			</div>
 		</div>
